--- a/DayTourSearchEngine/nbproject/project.properties
+++ b/DayTourSearchEngine/nbproject/project.properties
@@ -59,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=model.Model
+main.class=view.SearchWindow
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
