--- a/DayTourSearchEngine/nbproject/project.properties
+++ b/DayTourSearchEngine/nbproject/project.properties
@@ -34,7 +34,8 @@ file.reference.sqlite-jdbc-3.16.1.jar=sqlite-jdbc-3.16.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.16.1.jar}
+    ${file.reference.sqlite-jdbc-3.16.1.jar}:\
+    ${libs.Calendar.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
