--- a/DayTourSearchEngine/nbproject/project.properties
+++ b/DayTourSearchEngine/nbproject/project.properties
@@ -62,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=view.SearchPanel
+main.class=view.SearchFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
