DateChooser virkar vonandi núna

--- a/DayTourSearchEngine/nbproject/project.properties
+++ b/DayTourSearchEngine/nbproject/project.properties
@@ -35,7 +35,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.16.1.jar}:\
-    ${libs.Calendar.classpath}
+    ${libs.DateChooser.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
