--- a/DayTourSearchEngine/nbproject/project.properties
+++ b/DayTourSearchEngine/nbproject/project.properties
@@ -29,13 +29,14 @@ dist.jar=${dist.dir}/DayTourSearchEngine.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.DateChooser.jar=DateChooser.jar
 file.reference.JavaApplication2-src=src
 file.reference.sqlite-jdbc-3.16.1.jar=sqlite-jdbc-3.16.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.16.1.jar}:\
-    ${libs.DateChooser.classpath}
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
